--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/Code/NoPlaceLikeHome/.tmux.conf
 
 set -g default-terminal 'screen-256color'
 
@@ -11,9 +11,33 @@ bind-key l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
+set-option -g status-position top
+set-option -g default-shell /bin/zsh  
+# fish is great, but not posix compliant
+# maybe ill write my own shell at some point
+
 set -g prefix C-s
 set -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
+
+# --- CATPPUCCIN ---
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+## STATUS LINE ##
+set -g status-right-length = 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+## END STATUS LINE ##
+
+# --- END CATPPUCCIN ---
 
 run '~/.tmux/plugins/tpm/tpm'
